--- a/rubik1.html
+++ b/rubik1.html
@@ -24,11 +24,11 @@
         negyvenháromtrillió-kétszázötvenkétbilliárd-hárombillió-kétszázhetvennégymiliárd-négyszáznyolcvankilencmillió-nyolcszázötvenhatezer).
     </p>
     <div class="erdekesseg">
-       <p>Ha az ember minden másodpercben fordít egyet a kockán, és ezt a nap 24 órájában csinálja, akkor
+       <p><i>Ha az ember minden másodpercben fordít egyet a kockán, és ezt a nap 24 órájában csinálja, akkor
         (feltéve hogy nem jut olyan álláshoz, amit már egyszer kipróbált) 1.371.512.026.715
         (egybillió-háromszázhetvenegymilliárd-ötszáztizenkétmillió-huszonhatezer-hétszáztizenöt) év-re van szüksége az
         összes lehetséges állás kipróbálásához... Vagyis annyi esélye van az embernek véletlenül kirakni, mint 5x egymás
-        után megnyerni a LOTTO 5-öst!</p>
+        után megnyerni a LOTTO 5-öst!</i></p>
     </div>
 
     <h3>Kirakási metódusok</h3>
